--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ nav {
 
 /* Seção da Cartilha */
 .cartilha-section {
-  background: url('imagens/cartilha-background.png') no-repeat center center/cover;
+  background: url('imagens/fundo-cartilha.png') no-repeat center center/cover;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
